--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -44,3 +44,16 @@ RUN cd ~/opencv/opencv && mkdir release && cd release && \
           -D WITH_TBB=ON ..
 
 RUN cd ~/opencv/opencv/release && make -j $(nproc) && make install
+
+
+# Add a notebook profile.
+RUN mkdir -p -m 700 /root/.jupyter/ && \
+    echo "c.NotebookApp.ip = '*'" >> /root/.jupyter/jupyter_notebook_config.py
+
+VOLUME /notebooks
+WORKDIR /notebooks
+
+EXPOSE 8888
+
+ENTRYPOINT ["tini", "--"]
+CMD ["jupyter", "notebook", "--no-browser", "--allow-root"]
